--- a/georentate_app/app/src/main/res/drawable/bottom_sheet_background.xml
+++ b/georentate_app/app/src/main/res/drawable/bottom_sheet_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#fff"/>
-    <stroke android:color="@color/colorAccent" android:width="1dp"/>
-    <corners android:radius="50dp"/>
+    <corners android:topLeftRadius="15dp" android:topRightRadius="15dp"/>
+    <stroke android:color="@color/colorPrimary" android:width="1dp"/>
 </shape>
