--- a/georentate_app/app/src/main/res/layout/bottom_sheet_upper_layout.xml
+++ b/georentate_app/app/src/main/res/layout/bottom_sheet_upper_layout.xml
@@ -5,117 +5,148 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+                android:id="@+id/bottom_sheet_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
+                android:tint="@color/colorPrimaryDark"/>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="5dp">
+            android:padding="5dp">
+
+        <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:elevation="6dp"
+                android:id="@+id/view2"
+                app:cardCornerRadius="40dp"
+                android:innerRadius="0dp"
+                android:shape="ring"
+                android:thicknessRatio="1.9"
+                android:layout_weight="1"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_horizontal">
+
+            <ImageView
+                    android:id="@+id/checkpoint_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/church"/>
+
+        </androidx.cardview.widget.CardView>
+
+
 
         <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="3">
 
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="5dp"
-                    android:layout_gravity="center_vertical">
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/bottom_sheet_checkpoint_name_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Example name"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:fontFamily="sans-serif-light"
+                        android:layout_marginLeft="7dp"/>
+
+                <ProgressBar
+                        android:id="@+id/travel_mode_loading_bar"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="5dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                 <ImageView
-                        android:id="@+id/directions_icon_dynamic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_home_black_24dp"
+                        android:layout_gravity="center_vertical"
+                        android:tint="@color/arrowColorBlue"
+                        android:layout_marginLeft="5dp"/>
+
+                <TextView
+                        android:id="@+id/bottom_sheet_adress_textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="-"
+                        android:textSize="12sp"
+                        android:textColor="@color/arrowColorBlue"
+                        android:fontFamily="sans-serif-light"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="3dp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <ImageView
+                        android:id="@+id/bottom_sheet_travel_mode_ImageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/ic_directions_walk_black_24dp"
-                        android:layout_margin="3dp"
-                        android:tint="@color/colorAccent"/>
+                        android:layout_gravity="center_vertical"
+                        android:tint="@color/colorAccent"
+                        android:layout_marginLeft="5dp"/>
+
+                <TextView
+                        android:id="@+id/bottom_sheet_distance_textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="-"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorAccent"
+                        android:fontFamily="sans-serif-light"
+                        android:layout_gravity="center_vertical"
+                        android:layout_margin="3dp"/>
 
                 <ImageView
+                        android:id="@+id/bottom_sheet_travel_time_ImageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/ic_access_time_black_24dp"
-                        android:layout_margin="3dp"/>
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                        android:layout_gravity="center_vertical"
+                        android:tint="@color/colorAccent"
+                        android:layout_marginLeft="5dp"/>
 
                 <TextView
-                        android:id="@+id/distance_textView"
+                        android:id="@+id/bottom_sheet_travel_time_textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="2.3 km"
-                        android:textSize="18sp"
-                        android:layout_margin="3dp"
-                        android:textColor="@color/colorAccent"/>
-
-                <TextView
-                        android:id="@+id/time_textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="10 min"
-                        android:textSize="18sp"
+                        android:text="-"
+                        android:textSize="12sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorAccent"
+                        android:fontFamily="sans-serif-light"
+                        android:layout_gravity="center_vertical"
                         android:layout_margin="3dp"/>
+
             </LinearLayout>
-
-        </LinearLayout>
-
-
-        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:orientation="vertical">
-
-            <ImageView
-                    android:id="@+id/bottom_sheet_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
-                    android:layout_gravity="center_horizontal"
-                    android:tint="@color/colorPrimaryDark"/>
-
-            <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_navigation_black_24dp"
-                    android:layout_gravity="center"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:orientation="vertical"
-                android:layout_gravity="center">
-
-            <TextView
-                    android:id="@+id/Checkpoint_name_bottom_sheet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Checkpoint name"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="18sp"/>
-
-            <TextView
-                    android:id="@+id/Checkpoint_scan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Scan"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="18sp"
-                    android:textColor="#03A9F4"
-                    android:textStyle="bold"
-                    android:background="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"/>
 
         </LinearLayout>
 
