--- a/georentate_app/app/src/main/res/layout/fragment_map.xml
+++ b/georentate_app/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/mapFragmentLayout"
+        >
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,7 +29,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginBottom="130dp"
+                android:layout_marginBottom="165dp"
                 android:layout_marginRight="5dp"
                 app:srcCompat="@drawable/ic_my_location_black_24dp"/>
 
@@ -39,9 +41,9 @@
             android:layout_height="350dp"
             app:layout_behavior="@string/bottom_sheet_behavior"
             app:behavior_hideable="false"
-            android:background="@drawable/checkpoint_item_background"
+            android:background="@drawable/bottom_sheet_background"
             android:elevation="4dp"
-            app:behavior_peekHeight="125dp">
+            app:behavior_peekHeight="160dp">
 
         <include layout="@layout/bottom_sheet_layout"/>
 
