--- a/georentate_app/app/src/main/res/values/colors.xml
+++ b/georentate_app/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#aeaeae</color>
     <color name="colorAccent">#f44336</color>
     <color name="arrowColorBlue">#2196f3</color>
+    <color name="colorBlack">#000000</color>
 </resources>
